# ollama-proxy

./: .env.example  Cargo.toml  README.md  demo.rs  guide.md  install.ps1  install.sh  main2.rs  uninstall.ps1  uninstall.sh
src/: demo.rs  main.rs
src/models/: config.rs  mod.rs
src/providers/: mod.rs  ollama_provider.rs  openai_provider.rs
