[package]
name = "ollama-proxy"
version = "0.1.0"
edition = "2024"

# 添加 bin 配置使项目可执行
[[bin]]
name = "ollama-proxy"
path = "src/demo.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.22"
dotenvy = "0.15"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }
chrono = "0.4.42"