[package]
name = "ollama-proxy"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = "0.4.42"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures-util = "0.3.31"
serde_yaml = "0.9.3"